tasks-service/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasks-service
  template:
    metadata:
      labels:
        app: tasks-service
    spec:
      containers:
        - name: tasks-service
          image: foxt451/mcsvc_tasks_service:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
