tasks-service/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tasks-service
spec:
  selector:
    app: tasks-service
  ports:
  - port: 3000
    targetPort: 3000
